<resources>
    <string name="app_name">搜书</string>
    <string name="scanning">扫一扫</string>
    <string name="search_online">在线搜索</string>
    <string name="search_local">本地查询</string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="menu_favorite">收藏</string>
    <string name="menu_browser">在浏览器中打开</string>
    <string name="menu_share">分享</string>
    <string name="menu_more">更多选项</string>
    <string name="toggle_flash">太暗了？点我</string>
    <string name="scanning_title">ISBN扫描</string>
    <string name="empty_text">点击重新加载...</string>
    <string name="error_http_400">bad request</string>
    <string name="error_http_404">服务器资源找不到</string>
    <string name="error_http_500">服务器错误</string>
    <string name="error_socket_timeout">网络超时</string>
    <string name="error_socket_unreachable">网络不可用</string>
    <string name="error_unkown">未知错误</string>
    <string name="error_http">网络连接错误</string>
    <string name="load_error">加载失败，点击重试...</string>
</resources>
