<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    android:icon="@drawable/ic_favorite_border_white_24dp"-->
    <!--android:icon="@drawable/ic_more_vert_white_24dp"-->
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_favorite"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_browser"
        android:orderInCategory="100"
        android:title="@string/menu_browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_shared"
        android:orderInCategory="100"
        android:title="@string/menu_share"
        app:showAsAction="never" />


</menu>